--- a/views/nuevo_evento.ejs
+++ b/views/nuevo_evento.ejs
@@ -32,7 +32,7 @@
                                 <div class="card-image">
                                   <img class="imgPicker imgP" src="../img/no-img.jpg">
                                   <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
-                                  <input class="file-upload" id="filebutton" type="file" name='url_imagenB' style="display:none">
+                                  <input class="file-upload" id="filebutton" type="file" name='url_imagen' style="display:none">
                                 </div>
                               </div>
                         </div>
