--- a/views/nueva_sala.ejs
+++ b/views/nueva_sala.ejs
@@ -28,19 +28,19 @@
                             <label for="nom_sala"> Nombre de la sala </label>
                         </div>
 
-                    
+                        
                         <div class="input-field col s10 offset-s1">
                         <div class="file-field input-field">
                             <div class="btn">
-                              <span>File</span>
+                              <span> Mp3</span>
                               <input type="file">
                             </div>
                             <div class="file-path-wrapper">
-                              <input class="file-path validate" name="file" type="text">
+                              <input placeholder="audioguía (archivo mp3)" class="file-path validate" name="file" type="text">
                             </div>
                             
                         </div>
-                        <label for="file"> Nombre de la sala </label>
+                        
                         </div>
                     
                         <div class="col offset-s1">
