CU modify museum

--- a/views/museo_registrar.ejs
+++ b/views/museo_registrar.ejs
@@ -1,5 +1,6 @@
 <%- include('includes/header_image.ejs') %>
 <main>
+<form method="POST" enctype="multipart/form-data">
   <div class="container">
     <% for (let museo of museos){%>
     <h1 class="white-text"><%=museo.nom_museo%></h1>
@@ -11,11 +12,9 @@
             <div class="col s10">
               <div class="card">
                 <div class="card-image">
-                  <img src='/uploads/<%=museo.imgP_museo%>'/>
-                  <a
-                    class="btn-floating halfway-fab waves-effect waves-light primary-color"
-                    ><i class="material-icons">edit</i></a
-                  >
+                  <img class="imgPicker imgP" src='/uploads/<%=museo.imgP_museo%>'/>
+                  <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
+                  <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
                 </div>
               </div>
             </div>
@@ -27,6 +26,7 @@
               <input
                 placeholder="Ej: MAQRO"
                 id="nom_museo"
+                name="nom_museo"
                 type="text"
                 class="validate"
                 value="<%=museo.nom_museo%>"
@@ -37,6 +37,7 @@
                 <input
                   placeholder="Ej: 442-212-2357"
                   id="num_museo"
+                  name="num_museo"
                   type="text"
                   class="validate"
                   value="<%=museo.num_museo%>"
@@ -45,7 +46,7 @@
               </div>
                 
                 <div class="input-field col s9 offset-s1">
-                    <input placeholder="Ej: C. Ignacio Allende Sur 14" id="direccion_museo" type="text" class="validate" value="<%=museo.ubicacion_museo%>">
+                    <input placeholder="Ej: C. Ignacio Allende Sur 14" id="direccion_museo" name="direccion_museo" type="text" class="validate" value="<%=museo.ubicacion_museo%>">
                     <label for="direccion_museo"> Dirección </label> 
                 </div>
                 <a style="margin-right:30px;margin-top:10px" class="btn-floating waves-effect waves-light primary-color"><i class="material-icons left">location_on</i> </a>
@@ -79,7 +80,7 @@
                     </tr>
                   </thead>
           
-                  <tbody>
+                  <!-- <tbody>
                     <tr>
                       <td>Lunes</td>
                       <td><input type="time" id="appt" name="appt" required/></td>
@@ -115,7 +116,7 @@
                       <td><input type="time" id="appt" name="appt" required/></td>
                       <td><input class="timepicker" placeholder="Selecciona una hora"/></td>
                     </tr>
-                  </tbody>
+                  </tbody> -->
                 </table>
             </div>
             <div class="modal-footer">
@@ -130,17 +131,23 @@
 
       <div class="row center margin-10">
         <div class="input-field col s10 offset-s1">
-          <textarea id="desc_museo" class="materialize-textarea"><%=museo.desc_museo%></textarea>
+          <textarea id="desc_museo" name="desc_museo" class="materialize-textarea"><%=museo.desc_museo%></textarea>
           <label for="textarea1"> Descripción </label>
         </div>
-        <button onclick="editMuseum(this)" id="<%=museo.id_museo%>" class="btn waves-effect waves-light green margin-10">
+        <input style="display:none" name="id_museo" value="<%=museo.id_museo%>">
+        <button type="submit" value="upload" class="btn waves-effect waves-light green margin-10">
           <i class="material-icons left">check</i>
           Guardar cambios
-        </button>
+      </button>
+        <!-- <button onclick="editMuseum(this)" id="<%=museo.id_museo%>" class="btn waves-effect waves-light green margin-10">
+          <i class="material-icons left">check</i>
+          Guardar cambios
+        </button> -->
       </div>
     </div>
     <%}%>    
 
     <script src="/js/script_editar_museo.js"></script>
 </main>
+</form>
 <%- include('includes/footer.ejs') %>
