CU modify museum

--- a/views/museo_registrar.ejs
+++ b/views/museo_registrar.ejs
@@ -12,6 +12,7 @@
             <div class="col s10">
               <div class="card">
                 <div class="card-image">
+                  <input value="<%=museo.imgP_museo%>" name="museo_url" style="display:none">
                   <img class="imgPicker imgP" src='/uploads/<%=museo.imgP_museo%>'/>
                   <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
                   <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
