--- a/views/nuevo_evento.ejs
+++ b/views/nuevo_evento.ejs
@@ -57,7 +57,7 @@
                                 <a class="btn waves-effect waves-light primary-color modal-trigger" href="#modal_hr"><i class="material-icons left">calendar_month</i>Agregar horarios </a>
                                 <div class="input-field col s12">
                                     <select multiple id="sevento" name="sevento">
-                                      <option value="" disabled selected>Seleccionar categoria:</option>
+                                      <option value="" disabled selected>Seleccionar categoria</option>
                                       <% for (let tag of tags){%>
                                       <option value='<%=tag.id_tag%>'><%=tag.nom_tag%></option>
                                       <%}%>
