CU gallery and artworks

--- a/views/museo_registrar.ejs
+++ b/views/museo_registrar.ejs
@@ -55,7 +55,7 @@
             <div class="col offset-s1">
                 <!--<table>-->
               <div class="col">
-                <a class="btn waves-effect waves-light primary-color"
+                <a href="/museo/<%=museo.id_museo%>/sala" class="btn waves-effect waves-light primary-color"
                   ><i class="material-icons left">add_box</i>Edita las salas
                 </a>
               </div>
