--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -41,7 +41,7 @@
                         <div class="col s10">
                             <div class="card imgPicker">
                                 <div class="card-image">
-                                  <img class="imgPicker imgP" src="../img/no-img.jpg">
+                                  <img class="imgPicker imgP" src="/img/no-img.jpg">
                                   <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
                                   <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
                                 </div>
