--- a/views/sala_obras.ejs
+++ b/views/sala_obras.ejs
@@ -4,21 +4,21 @@
 
 <div class="container">
     <% for (let m of museo){%>
-    <h1 class="white-text"><%=m.nom_museo%></h1>
+    <% for (let s of sala){%>
+    <h1 class="white-text"><%=s.nom_sala%></h1>
     
     
         <div class="white min-container">
             
                 <!-- valign-wrapper -->
                 
-                    <% for (let sala of salas){%>
-                        <%if(sala.status_sala == 1){%>
+                    <% for (let obra of obras){%>
                             <div class="row flex">
                                 <div class="col s4">
                                     
                                         <div class="card imgPicker">
                                             <div class="card-image">
-                                            <img class="imgPicker imgP" src="/uploads/<%=sala.img_sala%>">
+                                            <img class="imgPicker imgP" src="/uploads/<%=obra.img_obra%>">
                                             </div>
                                         </div>
                                     
@@ -26,23 +26,20 @@
                                 <div class="col s7"> 
                                     <div class="col s11">
                                     <div class="row">
-                                        <h4> <%=sala.nom_sala%> </h4>
-                                        <p> <%=sala.desc_sala%> </p>
-                                        <a href="/museo/<%=m.id_museo%>/<%=sala.id_sala%>" class="blue-gradient-btn btn-large hoverable">
-                                            Editar Sala
+                                        <h4> <%=obra.nom_obra%> </h4>
+                                        <p> <%=obra.desc_obra%> </p>
+                                        <a href="/museo/<%=m.id_museo%>/<%=s.id_sala%>/<%=obra.id_obra%>" class="blue-gradient-btn btn-large hoverable">
+                                            Editar Obra
                                         </a>
                                     </div>
                                 </div>
                                 </div>
-                                <!-- <div class="col s2 valign-wrapper">
-                                    
-                                </div> -->
                             </div>
-                        <%}%>
                     <%}%>
                     
             
         </div>   
+        <%}%>
         <%}%>
 </div>
 </form>
