--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -7,11 +7,11 @@
         <div class="col l3 s12">
           <h5 class="white-text">Información Importante</h5>
           <ul>
-            <li><a class="white-text" href="#!">Documentation de la Aplicación</a></li>
-            <li><a class="white-text" href="#!">FAQ</a></li>
-            <li><a class="white-text" href="#!">Tutoriales</a></li>
-            <br>
-            <li><button class="btn-large waves-effect waves-light primary-color-btn lighten-1">Soporte Técnico</button></li>
+            <li><a href="/">Página principal</a></li>
+
+            <li><a href="/usuario/rol">Usuarios y privilegios</a></li>
+
+            <li><a href="/guias">Guías</a></li>
           </ul>
         </div>
         
