--- a/views/guias.ejs
+++ b/views/guias.ejs
@@ -14,7 +14,7 @@
             <% for (guia of guias) { %> 
             <div class="row center valign-wrapper ">
                 <div class="col s3">
-                    <img src=<%= guia.imagen_guia %> style="width: fit-content; height: 100px; border-radius: 9px;">
+                    <img src="/img/queretaro-dark.jpg" style="width: fit-content; height: 100px; border-radius: 9px;">
                 </div>
                 <div class="col s6">
                     <div class="row">
@@ -42,10 +42,10 @@
                         </a>
                 </div>
                 <div class="col s6">
-                    col4.2
+                    
                 </div>
                 <div class="col s3">
-                    col4.3
+                    
                 </div>
             </div>
             
