--- a/views/sala_obras.ejs
+++ b/views/sala_obras.ejs
@@ -26,11 +26,12 @@
                                 <div class="col s7"> 
                                     <div class="col s11">
                                     <div class="row">
-                                        <h4> <%=obra.nom_obra%> </h4>
+                                        <h4> <%=obra.nom_obra%> </h4> 
                                         <p> <%=obra.desc_obra%> </p>
-                                        <a href="/museo/<%=m.id_museo%>/<%=s.id_sala%>/<%=obra.id_obra%>" class="blue-gradient-btn btn-large hoverable">
+                                        <a href="/museo/<%=m.id_museo%>/<%=s.id_sala%>/<%=obra.id_obra%>" class="blue-gradient-btn-edges btn-large hoverable">
                                             Editar Obra
                                         </a>
+                                        <button class="btn-large red hoverable">Eliminar</button>
                                     </div>
                                 </div>
                                 </div>
