Cambios en evento

--- a/views/nuevo_evento.ejs
+++ b/views/nuevo_evento.ejs
@@ -47,15 +47,24 @@
 
                     </div>
                     <div class="row center">
-                        
-                                <div class="input-field col s10 offset-s1">
-                                <input placeholder="Ej:2022-10-12" id="fecha_hora" name="fecha_hora" type="text" class="validate">
-                                <label for="fecha_hora"> Fecha y Hora </label>
+                                <div class="input-field col s5 offset-s1">
+                                <input id="fecha_start" name="fecha_start" type="text" class="datepicker">
+                                <label for="fecha_start"> Fecha Inicio:</label>
                                 </div>
-                                <!--a class="btn waves-effect waves-light primary-color modal-trigger" href="#modal_hr"><i class="material-icons left">calendar_month</i>Agregar horarios </a-->  
-                      
-                        
-                        
+                                <div class="input-field col s5 ">
+                                  <input id="fecha_end" name="fecha_end" type="text" class="datepicker">
+                                  <label for="fech_end"> Fecha Fin:</label>
+                                  </div>
+
+                                 <div class="input-field col s5 offset-s1">
+                                  <input id="hora_inicio" name="hora_inicio" type="text" class="timepicker">
+                                  <label for="hora_inicio"> Hora Inicio:</label>
+                                  </div>
+
+                                <div class="input-field col s5">
+                                  <input id="hora_fin" name="hora_fin" type="text" class="timepicker">
+                                  <label for="hora_fin"> Hora Fin:</label>
+                                  </div>
                     </div>
                 </div>
 
