--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -1,16 +1,7 @@
 <%- include('includes/header.ejs') %><div id="index-banner" class="parallax-container">
 <main>
-  
-  <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header white-text text-lighten-2"> Buenos días, Ricardo Núñez</h1>
-        <div class="row">
-          <h5 class="header col s12 white-text"> Conoce el estado de Querétaro. Conoce su cultura. </h5>
-        </div>
-        <br><br>
-      </div>
-    </div>
+
+  <div class="parallax-container">
     <div class="parallax"><img src="/img/queretaro-dark.jpg" alt="background querétaro"></div>
   </div>
 
