--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -1,92 +1,101 @@
 <%- include('includes/header.ejs') %><div id="index-banner" class="parallax-container">
-<main>
-
-  <div class="parallax-container">
-    <div class="parallax"><img src="/img/queretaro-dark.jpg" alt="background querétaro"></div>
-  </div>
-
-
-  <div class="container">
-      <div class="row flex">
-          <div class="col s10">
-            <h4 class="text-bold"> Lista de museos </h4>
+  <main>
+    
+    <div class="section no-pad-bot">
+        <div class="container">
+          <br><br>
+          <h1 class="header white-text text-lighten-2"> Buenos días, Ricardo Núñez</h1>
+          <div class="row">
+            <h5 class="header col s12 white-text"> Conoce el estado de Querétaro. Conoce su cultura. </h5>
           </div>
-          <div class="col s2">
-            
-            <a href="/museo/nuevo_museo" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a>
-          </div>
-        
-          
-       
+          <br><br>
+        </div>
       </div>
-        
-      <ul id ="cards" class="cards">
-        <% for (let museo of museos){%>
-          <%if(museo.status == 1){%>
-        <li class="card-panel card-pers hoverable" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/uploads/<%=museo.imgP_museo%>') no-repeat; background-size: cover;">
-          
-          <div>
-            <a href="/museo/<%=museo.id_museo%>" class="btn-floating green card-link" style="float:right;margin:0px;margin-left:10px"> <i class="material-icons">edit</i> </a>
-            <a onclick="deleteMuseum(this)" id="<%=museo.id_museo%>" class="btn-floating red card-link" style="float:right;margin:0px"> <i class="material-icons">delete</i> </a>
-            <h3 class="card-title white-text"><%=museo.nom_museo%></h3>
-            
-            <div class="card-content white-text">
-              <p> Tel: <%=museo.num_museo%> 
-              </p>
-              <p><%=museo.desc_museo.substring(0, 100)%> . . .</p>
-            </div>
-          </div>
-          
-        </li>
-        <%}%>
-        <%}%>
-      </ul>
-
-
-
-
-      <div class="row flex">
-        <div class="col s10">
-          <h4 class="text-bold"> Lista de eventos </h4>
-        </div>   
-        <div class="col s2">
-            
-          <a href="/evento/nuevo_evento" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a>
-        </div>   
+      <div class="parallax"><img src="/img/queretaro-dark.jpg" alt="background querétaro"></div>
     </div>
-      <ul id="cardsevents"class="cards">
-        <% for (let evento of eventos){%>
+  
+  
+    <div class="container">
+        <div class="row flex">
+            <div class="col s10">
+              <h4 class="text-bold"> Lista de museos </h4>
+            </div>
+            <div class="col s2">
+              
+              <a href="/museo/nuevo_museo" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a>
+            </div>
           
-            <li class="card-panel card-pers hoverable" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/uploads/<%=evento.multimedia_evento%>') no-repeat; background-size: cover;">
+            
+         
+        </div>
           
-              <div>
-                <a onclick="deleteEvento(this)" id="<%=evento.id_evento%>" class="btn-floating red card-link" style="float:right;margin:0px"> <i class="material-icons">delete</i> </a>
-                <h3 class="card-title white-text"><%=evento.info_evento%></h3>
-                
-                <div class="card-content white-text">
-                  <p> Fecha Inicio: <%=evento.fecha_hora_evento.substring(0,10)%> 
-                  </p>
-                  <p>Fecha Fin: <%=evento.fecha_hora_evento.substring(11,21)%>
-                  </p>
-                  <p>Hora Inicio: <%=evento.fecha_hora_evento.substring(22,30)%>
-                  </p>
-                  <p>Hora Fin: <%=evento.fecha_hora_evento.substring(30,39)%>
-                  </p>
-                  <p>
-                    Tags: 
-                    <% for (let tag of tags){%>
-                      <% if (evento.id_evento == tag.id_evento_tag){ %>
-                        <%= tag.nom_tag %>
-                      <%}%>
-                    <%}%>
-                  </p>                  
-                </div>
+        <ul id ="cards" class="cards">
+          <% for (let museo of museos){%>
+            <%if(museo.status == 1){%>
+          <li class="card-panel card-pers hoverable" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/uploads/<%=museo.imgP_museo%>') no-repeat; background-size: cover;">
+            
+            <div>
+              <a href="/museo/<%=museo.id_museo%>" class="btn-floating green card-link" style="float:right;margin:0px;margin-left:10px"> <i class="material-icons">edit</i> </a>
+              <a onclick="deleteMuseum(this)" id="<%=museo.id_museo%>" class="btn-floating red card-link" style="float:right;margin:0px"> <i class="material-icons">delete</i> </a>
+              <h3 class="card-title white-text"><%=museo.nom_museo%></h3>
+              
+              <div class="card-content white-text">
+                <p> Tel: <%=museo.num_museo%> 
+                </p>
+                <p><%=museo.desc_museo.substring(0, 100)%> . . .</p>
               </div>
-            </li>
-        <%}%>
-      </ul>
-  </div>
-</main>
-<script src="/js/script_delete_museo.js"></script>
-<script src="/js/script_delete_evento.js"></script>
-<%- include('includes/footer.ejs') %>
+            </div>
+            
+          </li>
+          <%}%>
+          <%}%>
+        </ul>
+  
+  
+  
+  
+        <div class="row flex">
+          <div class="col s10">
+            <h4 class="text-bold"> Lista de eventos </h4>
+          </div>   
+          <div class="col s2">
+              
+            <a href="/evento/nuevo_evento" style="margin-top: 40px; margin-bottom: 0px;" class="waves-effect waves-light btn primary-color"><i class="material-icons left">add_box</i>Nuevo</a>
+          </div>   
+      </div>
+        <ul id="cardsevents"class="cards">
+          <% for (let evento of eventos){%>
+            
+              <li class="card-panel card-pers hoverable" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/uploads/<%=evento.multimedia_evento%>') no-repeat; background-size: cover;">
+            
+                <div>
+                  <a onclick="deleteEvento(this)" id="<%=evento.id_evento%>" class="btn-floating red card-link" style="float:right;margin:0px"> <i class="material-icons">delete</i> </a>
+                  <h3 class="card-title white-text"><%=evento.info_evento%></h3>
+                  
+                  <div class="card-content white-text">
+                    <p> Fecha Inicio: <%=evento.fecha_hora_evento.substring(0,10)%> 
+                    </p>
+                    <p>Fecha Fin: <%=evento.fecha_hora_evento.substring(11,21)%>
+                    </p>
+                    <p>Hora Inicio: <%=evento.fecha_hora_evento.substring(22,30)%>
+                    </p>
+                    <p>Hora Fin: <%=evento.fecha_hora_evento.substring(30,39)%>
+                    </p>
+                    <p>
+                      Tags: 
+                      <% for (let tag of tags){%>
+                        <% if (evento.id_evento == tag.id_evento_tag){ %>
+                          <%= tag.nom_tag %>
+                        <%}%>
+                      <%}%>
+                    </p>                  
+                  </div>
+                </div>
+              </li>
+          <%}%>
+        </ul>
+    </div>
+  </main>
+  <script src="/js/script_delete_museo.js"></script>
+  <script src="/js/script_delete_evento.js"></script>
+  <%- include('includes/footer.ejs') %>
