Popo Up user fixed

--- a/views/rbac_registrar.ejs
+++ b/views/rbac_registrar.ejs
@@ -75,7 +75,7 @@
     </div>
 
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Salir</a>
+      <a onclick="closeUser()" class="modal-close waves-effect waves-green btn-flat" id="salir">Salir</a>
       <a onclick="updateUser()" class="modal-close waves-effect waves-green btn-flat">Guardar Cambios</a>
     </div>
   </div>
