--- a/views/includes/header_image.ejs
+++ b/views/includes/header_image.ejs
@@ -28,6 +28,12 @@
         <li><a href="/usuario/rol">Usuarios y privilegios</a></li>
 
         <li><a href="/guias">Guías</a></li>
+        <a class="btn dropdown-trigger" id="username" href="#!" data-target="dropdown123"> <i class="material-icons left">account_circle</i></a>
+        
       </ul> 
     </div>
   </nav>
+
+  <ul id="dropdown123" class="dropdown-content" tabindex="0">
+    <li tabindex="0"><a href="/usuario/logout">Cerrar Sesión</a></li>
+  </ul>
