--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -4,7 +4,7 @@
     <div class="section no-pad-bot">
         <div class="container">
           <br><br>
-          <h1 class="header white-text text-lighten-2"> Buenos días, Ricardo Núñez</h1>
+          <h1 id="welcome" class="header white-text text-lighten-2"> </h1>
           <div class="row">
             <h5 class="header col s12 white-text"> Conoce el estado de Querétaro. Conoce su cultura. </h5>
           </div>
