--- a/views/nuevo_evento.ejs
+++ b/views/nuevo_evento.ejs
@@ -1,24 +1,10 @@
 <%- include('includes/header_image.ejs') %>
+<link rel="stylesheet" href="/css/style_evento.css">
 <main>
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
 <form id="nuevo_imagen"method="POST" enctype="multipart/form-data">
-
-
-
-
-  <!-- MODAL PARA SUBIR HORARIOS -->
-
-  <div id="modal_hr" class="modal">
-    <div class="modal-content">
-      <h4>Horarios del museo</h4>
-      <p>Elegir horario del museo</p>
-    </div>
-    <div class="modal-footer">
-      <a class="modal-close waves-effect waves-green btn-flat">Cerrar</a>
-    </div>
-  </div>
-
-
-
 <div class="container">
     <h1 class="white-text">Nuevo evento</h1>
     
