Adds agregar links and consultar links

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -30,6 +30,7 @@
         <li><a href="/">Página principal</a></li>
         <li><a href="/usuario/rol">Usuarios y privilegios</a></li>
         <li><a href="/guias">Guías</a></li>
+        <li><a href="/links">Links</a></li>
         <a class="btn dropdown-trigger" id="username" href="#!" data-target="dropdown123"> <i class="material-icons left">account_circle</i></a>
         
       </ul> 
