--- a/views/nuevo_evento.ejs
+++ b/views/nuevo_evento.ejs
@@ -27,28 +27,28 @@
                 <div class="col s7"> 
                     <div class="row center">
                         <div class="input-field col s10 offset-s1">
-                            <input placeholder="Ej: Noche de Peliculas" id="info_evento" name="info_evento" type="text" class="validate">
+                            <input placeholder="Ej: Noche de Peliculas" id="info_evento" name="info_evento" type="text" class="validate" required>
                             <label for="info_evento"> Nombre del Evento </label>
                         </div>
 
                     </div>
                     <div class="row center">
                                 <div class="input-field col s5 offset-s1">
-                                <input id="fecha_start" name="fecha_start" type="text" class="datepicker">
+                                <input id="fecha_start" name="fecha_start" type="text" class="datepicker" required>
                                 <label for="fecha_start"> Fecha Inicio:</label>
                                 </div>
                                 <div class="input-field col s5 ">
-                                  <input id="fecha_end" name="fecha_end" type="text" class="datepicker">
+                                  <input id="fecha_end" name="fecha_end" type="text" class="datepicker" required>
                                   <label for="fech_end"> Fecha Fin:</label>
                                   </div>
 
                                  <div class="input-field col s5 offset-s1">
-                                  <input id="hora_inicio" name="hora_inicio" type="text" class="timepicker">
+                                  <input id="hora_inicio" name="hora_inicio" type="text" class="timepicker" required>
                                   <label for="hora_inicio"> Hora Inicio:</label>
                                   </div>
 
                                 <div class="input-field col s5">
-                                  <input id="hora_fin" name="hora_fin" type="text" class="timepicker">
+                                  <input id="hora_fin" name="hora_fin" type="text" class="timepicker" required>
                                   <label for="hora_fin"> Hora Fin:</label>
                                   </div>
                     </div>
@@ -59,7 +59,7 @@
             <div class="row center margin-10">  
                 
                 <div class="input-field col s5">
-                        <input placeholder="Ej: C. Ignacio Allende Sur 14" name="ubicacion_evento" id="ubicacion_evento" type="text" class="validate">
+                        <input placeholder="Ej: C. Ignacio Allende Sur 14" name="ubicacion_evento" id="ubicacion_evento" type="text" class="validate" required>
                     <label for="ubicacion_evento"> Dirección </label> 
                 </div>
 
