Adds link url in forms

--- a/views/agregar_link.ejs
+++ b/views/agregar_link.ejs
@@ -14,9 +14,17 @@
             <div class="row valign-wrapper" style="margin-bottom: 0px;">
                 <div class="col s1" style="margin-top: 0px;" ></div>
                 <div class="col s12" style="margin-top: 0px; margin-bottom: 1em;">
-                    <div class="col s9">
-                        <h5>Nombre del Link</h5>
-                        <input id="nombre_link" placeholder="Ejemplo: https://google.com" type="text" name="nombre">
+                    <div class="row">
+                        <div class="col s9">
+                            <h5>Nombre del Link</h5>
+                            <input id="nombre_link" placeholder="Ejemplo: Secretaria de Cultura" type="text" name="nombre">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s9">
+                            <h5>URL del Link</h5>
+                            <input id="url_link" placeholder="Ejemplo: https://google.com" type="text" name="url">
+                        </div>
                     </div>
                 </div>
             </div>
