--- a/views/links.ejs
+++ b/views/links.ejs
@@ -1,4 +1,4 @@
-<%- include('includes/header.ejs') %>
+<%- include('includes/header_image.ejs') %>
 <style>
     body {
   background-image: url('/img/queretaro-dark.jpg');
@@ -6,7 +6,9 @@
 }
 </style>
 
-
+<!-- <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div> -->
 <div class="container" style="margin-bottom: 10%;">
     <% if (links.length > 0) { %>
         <h1 class="white-text">LINKS</h4>
