--- a/views/includes/header_image.ejs
+++ b/views/includes/header_image.ejs
@@ -29,6 +29,8 @@
         <li><a href="/usuario/rol">Usuarios y privilegios</a></li>
 
         <li><a href="/guias">Guías</a></li>
+
+        <li><a href="/links">Links</a></li>
         <a class="btn dropdown-trigger" id="username" href="#!" data-target="dropdown123"> <i class="material-icons left">account_circle</i></a>
         
       </ul> 
