Adds background to guias

--- a/views/guias.ejs
+++ b/views/guias.ejs
@@ -1,12 +1,15 @@
-<%- include('includes/header.ejs') %>
-<style>
+<%- include('includes/header_image.ejs') %>
+<!-- <style>
     body {
   background-image: url('/img/queretaro-dark.jpg');
   background-size: cover;
 }
-</style>
+</style> -->
+<link rel="stylesheet" href="/css/style_evento.css">
 
-
+<div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
 <div class="container" style="margin-bottom: 10%;">
     <% if (guias.length > 0) { %>
         <h1 class="white-text">Guías</h4>
