--- a/views/rbac_registrar.ejs
+++ b/views/rbac_registrar.ejs
@@ -1,7 +1,7 @@
-<%- include('includes/header.ejs') %>
+<%- include('includes/header_image.ejs') %>
 <link rel="stylesheet" href="/css/stylarbac.css">
 
-  <div id="index-banner" class="parallax-container">
+  <!--div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
         <h1 class="header white-text text-lighten-2"> Roles y Usuarios </h1>
@@ -9,15 +9,20 @@
       </div>
     </div>
     <div class="parallax"><img src="/img/queretaro-dark.jpg" alt="background querétaro"></div>
-  </div>
+  </div-->
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
 
   <div class="container">
     
     <br>
     <div class="search_box">
-      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Fliter Table Using Names">
+
+      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Buscar (Nombre, Rol, Museo)">
+      
     </div>
-      <table id="myTable" >
+      <table id="myTable" class="centered" >
         
         <tr  class="header" id="title">
             <th>Nombre</th>
