--- a/views/guias.ejs
+++ b/views/guias.ejs
@@ -31,9 +31,12 @@
                     </div>
                 </div>
                 <div class="col s3">
-                    <a class="blue-gradient-btn btn-large hoverable" href="/guias/editar_guia/<%=guia.id_guia%>">
-                        Editar Guía
-                    </a>
+                        <a class="blue-gradient-btn btn-large hoverable" href="/guias/editar_guia/<%=guia.id_guia%>">
+                            Editar Guía
+                        </a>
+                        <a class="red-gradient-btn btn-small hoverable" href="/guias/eliminar_guia/<%=guia.id_guia%>" style="margin-top: 10px;">
+                            Eliminar Guía
+                        </a>
                 </div>
             </div>
             <% } %>
