--- a/views/agregar_link.ejs
+++ b/views/agregar_link.ejs
@@ -14,7 +14,7 @@
 <div class="container" style="margin-bottom: 10%;">
     <h1 class="white-text">Agregar Nuevo Link</h4>
     <div class="white" style="padding-top: 2em; padding-bottom: 2em;">
-        <form action="/guias/agregar_link" method="POST">
+        <form action="/links/agregarLink" method="POST">
             <div class="row valign-wrapper" style="margin-bottom: 0px;">
                 <div class="col s1" style="margin-top: 0px;" ></div>
                 <div class="col s12" style="margin-top: 0px; margin-bottom: 1em;">
@@ -27,7 +27,7 @@
                     <div class="row">
                         <div class="col s9">
                             <h5>URL del Link</h5>
-                            <input id="url_link" placeholder="Ejemplo: https://google.com" type="text" name="url">
+                            <input id="url_link" placeholder="Ejemplo: google.com" type="text" name="url">
                         </div>
                     </div>
                 </div>
